sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:15: error: value setValeur is not a member of Unit
possible cause: maybe a semicolon is missing before `value setValeur'?
} setValeur(j,v) ;
  ^